[gd_scene load_steps=11 format=2]

[ext_resource path="res://Fonts/Extrude.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Human_Sprites/Player/Man_walk_Right.png" type="Texture" id=2]
[ext_resource path="res://TileSets/MenuTiles/BlackBackground.jpg" type="Texture" id=3]
[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=4]
[ext_resource path="res://Audio/The-Beginning-w-Caturday.mp3" type="AudioStream" id=5]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Walk_Menu"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="DynamicFont" id=1]
size = 150
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 50
font_data = ExtResource( 1 )

[node name="MainMenu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="BlackBackground" type="Sprite" parent="."]
position = Vector2( 533, 298 )
scale = Vector2( 1.22105, 1.88857 )
texture = ExtResource( 3 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 236.0
margin_top = 133.0
margin_right = 788.0
margin_bottom = 467.0

[node name="SpriteMenu" type="Sprite" parent="CenterContainer/VBoxContainer"]
position = Vector2( -7, 213 )
scale = Vector2( 10.5807, 9.15754 )
texture = ExtResource( 2 )
hframes = 6
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="CenterContainer/VBoxContainer/SpriteMenu"]
anims/RESET = SubResource( 2 )
anims/Walk_Menu = SubResource( 3 )

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 552.0
margin_bottom = 151.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "Belong"

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 155.0
margin_right = 552.0
margin_bottom = 212.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer"]
margin_left = 198.0
margin_right = 353.0
margin_bottom = 57.0

[node name="Start" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer/HBoxContainer"]
margin_right = 155.0
margin_bottom = 57.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 4 )
text = "Start"
flat = true

[node name="CenterContainer3" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 216.0
margin_right = 552.0
margin_bottom = 273.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer3"]
margin_left = 114.0
margin_right = 438.0
margin_bottom = 57.0

[node name="HowToPlay" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer3/HBoxContainer"]
margin_right = 324.0
margin_bottom = 57.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 4 )
text = "How To Play"
flat = true

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 277.0
margin_right = 552.0
margin_bottom = 334.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2"]
margin_left = 218.0
margin_right = 333.0
margin_bottom = 57.0

[node name="Exit" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer"]
margin_right = 115.0
margin_bottom = 57.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 5 )
text = "Exit"
flat = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -17.0
autoplay = true
